--- a/src/options.html
+++ b/src/options.html
@@ -336,6 +336,54 @@
         <table>
           <tr>
             <td class="l">
+              Breath Sounds (Left)
+            </td>
+            <td class="r">
+              <select id="pg4_breath_l">
+                <option value="0"></option>
+                <option value="7">Absent </option>
+                <option value="1">Clear </option>
+                <option value="3">Coarse </option>
+                <option value="2">Crackles </option>
+                <option value="5">Decreased </option>
+                <option value="10">Diminished </option>
+                <option value="6">Diminished bases </option>
+                <option value="8">Rales </option>
+                <option value="9">Rhonchi </option>
+                <option value="4">Wheeze </option>
+              </select>
+            </td>
+          </tr>
+          <tr>
+            <td class="l">
+              Breath Sounds (Right)
+            </td>
+            <td class="r">
+              <select id="pg4_breath_r">
+                <option value="0"></option>
+                <option value="7">Absent </option>
+                <option value="1">Clear </option>
+                <option value="3">Coarse </option>
+                <option value="2">Crackles </option>
+                <option value="5">Decreased </option>
+                <option value="10">Diminished </option>
+                <option value="6">Diminished bases </option>
+                <option value="8">Rales </option>
+                <option value="9">Rhonchi </option>
+                <option value="4">Wheeze </option>
+              </select>
+            </td>
+          </tr>
+          <tr>
+            <td class="l">
+              Breath Sounds Comments
+            </td>
+            <td class="r">
+              <input type="text" id="pg4_breath_comments">
+            </td>
+          </tr>
+          <tr>
+            <td class="l">
               Respiratory Comments
             </td>
             <td class="r">
